Changes for pixel perfect, minor changes

--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -16,7 +16,7 @@
             {{> offers/offers}}
             {{> gallery/gallery}}
             {{> partners/partners}}
-        <div class="pageBottomBgHelper" style="background-image: url('%=static=%/img/content/bg-contact.png');">
+        <div class="pageBottomBgHelper" style="background-image: url('%=static=%/img/content/bg-contact.jpg');">
             {{> clientsQuotes/clientsQuotes}}
             {{> contactForm/contactForm}}
         </div>
