--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -23,18 +23,19 @@
                 transform: translate(-50%,-50%);
                 z-index: 1001;
             }
-            .preloader_content span {
+            .preloader_content_text {
                 display: block;
                 margin: auto;
                 font-size: 14px;
                 text-align: center;
                 color: #36aeea;
+                margin-top: 30px;
             }
         </style>
         <div class="preloader_bg"></div>
         <div class="preloader_content">
-            <img src="static/img/general/preloader.gif" alt="preloader">
-            <span>loading...</span>
+            <img src="favicon.png" alt="preloader">
+            <span class="preloader_content_text">loading...</span>
         </div>
         <noscript>
             <style>
